Добавил html авторизацию и регистрацию

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,6 +1,7 @@
 .page-footer{
     height:100px;
     background-color:rgb(230, 230, 230);
+    margin-top:60px;
 }
 .main__footer{
     display:flex;
@@ -12,17 +13,24 @@
     margin:10px auto 0;
 }
 .social{
-    width:140px;
+    width:150px;
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
     list-style: none;
     li{
-        padding:5px;
-        width:40px;
-        height:40px;
-        border-radius: 20px;
-        border:1px solid black;
+        padding:7px;
+        width:45px;
+        height:45px;
+        border-radius: 25px;
+        border:1px solid rgb(100, 100, 100);
     }
+}
+.footer-login{
+    position: absolute;
+    margin-top:auto;
+    left:0;
+    bottom:0;
+    width:100%;
 }
