--- a/src/css/main.less
+++ b/src/css/main.less
@@ -60,3 +60,62 @@
     min-width:350px;
   }
 }
+.container{
+  width:1200px;
+  margin:60px auto;
+  padding:0 15px;
+}
+.form__item{
+  width:350px;
+  margin:0;
+ 
+  margin-bottom:14px;
+  font-size:16px;
+  input, textarea{
+    display:block;
+    width: 400px;
+    padding: 10px 12px;
+    margin-top:20px;
+    border: 1px solid #b4b4b4;
+    box-sizing: border-box;
+    font: inherit;
+  }
+}
+.preview{
+  display:none;
+  position: absolute;
+}
+.preview__remove {
+  position: absolute;
+  right: 0;
+  padding: 5px 10px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #ffffff;
+  border: none;
+  background-color: transparent;
+}
+
+.form__item--file label span {
+  display: block;
+  width: 115px;
+  height: 110px;
+  background-color: #cbdbab;
+  color: #ffffff;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 700;
+  padding: 45px 0;
+  box-sizing: border-box;
+  border: 1px solid #cbdbab;
+  cursor: pointer;
+}
+.red__button{
+  background-color:red;
+  margin-top:20px;
+  padding:12px 22px;
+  color:white;
+  border:none;
+  font-size:16px;
+  border-radius: 3px;
+}
