Добавил добавление лота и создал БД

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3,6 +3,8 @@
 @import "main.less";
 @import "normalize.less";
 @import "footer.less";
+@import "add.less";
+@import "login.less";
 
 html{
   background-color:white;
@@ -34,6 +36,7 @@ optgroup,
 select,
 textarea {
   font-family: inherit; 
+  font:inherit;
   font-size: 100%; 
   line-height: 1.15; 
   margin: 0; 
