--- a/src/css/main.less
+++ b/src/css/main.less
@@ -34,10 +34,10 @@
 .hr-shelf {
     padding: 0;
     margin-top:-10px;
-	height: 20px;
-	border: none;
-	border-bottom: 1px solid rgb(199, 199, 199);
-	box-shadow: 0 5px 5px -5px rgb(179, 179, 179);
+	  height: 20px;
+	  border: none;
+	  border-bottom: 1px solid rgb(199, 199, 199);
+	  box-shadow: 0 5px 5px -5px rgb(179, 179, 179);
 }
 .main-like{
   max-width:1200px;
@@ -65,22 +65,7 @@
   margin:60px auto;
   padding:0 15px;
 }
-.form__item{
-  width:350px;
-  margin:0;
- 
-  margin-bottom:14px;
-  font-size:16px;
-  input, textarea{
-    display:block;
-    width: 400px;
-    padding: 10px 12px;
-    margin-top:20px;
-    border: 1px solid #b4b4b4;
-    box-sizing: border-box;
-    font: inherit;
-  }
-}
+
 .preview{
   display:none;
   position: absolute;
@@ -119,3 +104,24 @@
   font-size:16px;
   border-radius: 3px;
 }
+.text-link{
+  margin-left: 20px;
+}
+.form__container{
+  input{
+  width:500px;
+  }
+  .message__text{
+    width:500px;
+    resize: none;
+  }
+}
+.container-register{
+  width:900px;
+  margin:60px auto;
+  padding:0 15px;
+}
+.message__text{
+  height:120px;
+}
+
