--- a/src/css/main.less
+++ b/src/css/main.less
@@ -133,20 +133,44 @@
 }
 .like{
   position: relative;
-  top:62px;
+  top:58px;
+  margin-right:20px;
+  padding:20px;
   width:30px;
   height:30px;
   background-color: white;
   background-image:url("/build/img/like.svg");
+  //background-position:top;
+  background-repeat: no-repeat;
   border:none;
+  outline: none;
+  border-radius:100%;
 }
 
 .like:active{
-  border:none;
-  background-color:red;
+  transform: translateY(-1px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: scaleX(1.1) scaleY(1.1);
+  //font-size:19px;
+  margin-right:23px;
+  opacity:1;
 }
+.like:hover{
+  opacity:0.8;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
 .like-counter{
   position: relative;
   top:55px;
   right:22px;
+}
+
+.count__like{
+ position: relative;
+  border:none;
+  top:-6px;
+  width:30px;
+  height:30px;
+  padding-left:30px;
 }
