--- a/src/css/add.less
+++ b/src/css/add.less
@@ -59,4 +59,68 @@
   .add__button{
     width:200px;
   }
- 
+
+  
+  .input__wrapper {
+    width: 100%;
+    position: relative;
+    margin: 15px 0;
+    text-align: center;
+  }
+   
+  .input__file {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+  }
+   
+  .input__file-icon-wrapper {
+    height: 60px;
+    width: 60px;
+    margin-right: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    fill:white;
+    border-right: 1px solid #fff;
+  }
+   
+  .input__file-button-text {
+    position:relative;
+    z-index: 2;
+    top:-40px;
+    left:20px;
+    line-height: 1;
+    margin-top: 1px;
+
+  }
+   
+  .input__file-button {
+   // position:absolute;
+   z-index: 1;
+   position:relative;
+    width: 100%;
+    max-width: 290px;
+    height: 60px;
+    background: #5aa33e;
+    color: white;
+    font-size: 1.125rem;
+    font-weight: 700;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    border-radius: 3px;
+    cursor: pointer;
+  }
