--- a/src/css/main.less
+++ b/src/css/main.less
@@ -88,7 +88,7 @@
   background-color: transparent;
 }
 
-.form__item--file label span {
+/* .form__item--file label span {
   display: block;
   width: 115px;
   height: 110px;
@@ -101,7 +101,7 @@
   box-sizing: border-box;
   border: 1px solid #cbdbab;
   cursor: pointer;
-}
+} */
 .red__button{
   background-color:red;
   margin-top:20px;
