Немного css у названия

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -208,3 +208,11 @@
 .hotel-image{
   z-index:2;
 }
+.lots-title{
+  margin-top:40px;
+  font-family: 'Geneva'; 
+  font-size:22px;
+  //color:rgb(56, 52, 52);
+  text-shadow: 2px 2px 4px rgb(126, 126, 126);
+  text-transform: uppercase;
+}
