--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -10,7 +10,7 @@
     flex-wrap: wrap;
     padding:0 20px;
     max-width:1200px;
-    margin:10px auto 0;
+    margin:0 auto 0;
 }
 .social{
     width:150px;
