--- a/src/css/login.less
+++ b/src/css/login.less
@@ -99,7 +99,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 15px;
-        border-bottom: 1px solid #eceeef;
+       /*  border-bottom: 1px solid #eceeef; */
     }
     .modal-title {
         text-align: center;
@@ -130,7 +130,7 @@
         .text-register{
             font-size:20px;
             padding-top:25px;
-            margin-right:15%;
+            margin-right:6%;
         }
         .button__login{
             font-size:19px;
@@ -138,7 +138,9 @@
     }
     
     .close {
-        float: right;
+        position:absolute;
+        top:0;
+        right:10px;
         font-family: sans-serif;
         font-size: 50px;
         font-weight: 700;
@@ -148,3 +150,13 @@
         opacity: .5;
         text-decoration: none;
     }
+.modal-text{
+    width: 100%;
+    padding: 0 0 10px 0;
+    margin-bottom:25px;
+    border: none;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: transparent; 
+    outline: none;
+    transition: 0.3s;
+}
