--- a/src/css/style.less
+++ b/src/css/style.less
@@ -8,6 +8,7 @@
 @import "pager.less";
 @import "hotel.less";
 @import "editor.less";
+@import "hotel_details.less";
 
 html{
   background-color:white;
