--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -1,4 +1,7 @@
-
+.hotel-details{
+    position:relative;
+    width:auto;
+}
 .hotel_gallery{
     height:125px;
     display:inline;
@@ -18,23 +21,43 @@
 .editor-redactor{
     position:absolute;
     right:5%;
-    top:150px;
+    top:-30px;
     padding-top:3px;
     width:220px;
     height:55px;
     border:3px solid rgb(16, 194, 46);
     border-radius: 5px 10px 15px 30px/30px 15px 10px 5px;
 }
-.editor-text{
+.editor-redactor__text{
     position:absolute;
-    right:40px;
-    top:-6px;
+    color:black;
+    right:45px;
+    top:14px;
     font-size:18px;
     text-transform: uppercase;
 }
-.editor-image{
+.editor-redactor__image{
     position:absolute;
     right:0;
     top:1px;
     width:40px;
+}
+.editor__title{
+    font-size:30px;
+}
+.container2{
+    width:700px;
+}
+.editor__text{
+    font-size:22px;
+    padding-top:5px;
+    font-weight: 400;
+}
+.editor__description{
+    font-size:24px;
+    font-weight: 700;
+}
+.editor__description-hotel{
+    margin-top:20px;
+    font-size:18px;
 }
