--- a/src/css/hotel.less
+++ b/src/css/hotel.less
@@ -207,3 +207,24 @@ body.lb-disable-scrolling {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
   }
+  .hotel__comments{
+    background: rgb(203, 205, 206);
+    border: 1px solid #8A8A8A;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 10px 0;
+    box-shadow: 2px 10px 10px 1px rgb(201, 201, 201);
+  }
+  .hotel__comments-text{
+    border:none;
+    width:100%;
+    resize: none;
+  }
+  .hotel__comment{
+    background:white;
+    border: 1px solid #8A8A8A;
+    border-radius: 3px;
+    padding:5px 10px;
+    margin: 10px 0;
+    box-shadow: 2px 10px 10px 1px rgb(201, 201, 201);
+  }
