--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -61,3 +61,41 @@
     margin-top:20px;
     font-size:18px;
 }
+.commnet__name{
+    border:none;
+    background: rgb(238, 238, 238);
+    font-size:18px;
+  }
+  .comment__text{
+    font-size:22px;
+  }
+
+  .comment__button{
+      border:1px solid rgb(201, 84, 84);
+      border-radius: 10px;
+      background:rgb(179, 35, 35);
+      padding:10px;
+      color:white;
+  }
+  .hotel__comments{
+    background: rgb(238, 238, 238);
+    border: 1px solid #8A8A8A;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 10px 0;
+    box-shadow: 2px 10px 10px 1px rgb(201, 201, 201);
+  }
+  .hotel__comments-text{
+    border:none;
+    width:100%;
+    resize: none;
+    box-shadow: none;
+  }
+  .hotel__comment{
+    background:white;
+    border: 1px solid #b4b4b4;
+    border-radius: 3px;
+    padding:5px 10px;
+    margin: 10px 0;
+   /*  box-shadow: 2px 10px 10px 1px rgb(201, 201, 201); */
+  }
