Начал делать форму для бронирования
Кнопка+, новая форма+, поля+, стили-

--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -91,6 +91,10 @@
     resize: none;
     box-shadow: none;
   }
+  .editor-description{
+      display:flex;
+      justify-content:space-between;
+  }
   .hotel__comment{
     background:white;
     border: 1px solid #b4b4b4;
@@ -98,4 +102,13 @@
     padding:5px 10px;
     margin: 10px 0;
    /*  box-shadow: 2px 10px 10px 1px rgb(201, 201, 201); */
+  }
+  .button-bron{
+    margin-top:70px;
+      a{
+          font-size:22px;
+          background:rgb(36, 153, 221);
+          color:white;
+          padding:20px;
+      }
   }
