Модальное окно брони

--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -112,3 +112,11 @@
           padding:20px;
       }
   }
+  .modal-dialog-bron{
+    position: relative;
+    width: auto;
+    //margin: 29%;
+    margin-top:70px;
+    margin-left:35%;
+    max-width:600px;
+  }
