Сделал бронирование с ограничениями

--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -120,3 +120,13 @@
     margin-left:35%;
     max-width:600px;
   }
+
+  .modal__ok{
+      margin:20px auto 0;
+      width:150px;
+      text-align:center;
+  }
+ .modal-dialog-bron4{
+/*     margin-top:150px; */
+    margin:200px auto 0;
+ }
