--- a/src/css/style.less
+++ b/src/css/style.less
@@ -9,6 +9,7 @@
 @import "hotel.less";
 @import "editor.less";
 @import "hotel_details.less";
+@import "sign-up.less";
 
 html{
   background-color:white;
