--- a/src/css/main.less
+++ b/src/css/main.less
@@ -104,7 +104,6 @@
 } */
 .red__button{
   background-color:red;
-  margin-top:20px;
   padding:12px 22px;
   color:white;
   border:none;
@@ -123,11 +122,11 @@
     resize: none;
   }
 }
-.container-register{
+/* .container-register{
   width:900px;
   margin:60px auto;
   padding:0 15px;
-}
+} */
 .message__text{
   height:120px;
 }
