сделал форму для уведомлений

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -73,3 +73,35 @@
     margin:0 auto;
 }
 
+/* ::-webkit-scrollbar-button {
+    background-image:url('');
+    background-repeat:no-repeat;
+    width:5px;
+    height:0px
+    } */
+    
+   /*  ::-webkit-scrollbar-track {
+    background-color:#ecedee
+    } */
+    
+    ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    background-color:#f5c150;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover{
+    background-color:#a7bd2a;
+    } 
+    
+    ::-webkit-resizer{
+    background-image:url('');
+    background-repeat:no-repeat;
+    width:4px;
+    height:0px
+    }
+    
+    ::-webkit-scrollbar{
+    width: 14px;
+    }
+
