--- a/src/css/style.less
+++ b/src/css/style.less
@@ -10,6 +10,7 @@
 @import "editor.less";
 @import "hotel_details.less";
 @import "sign-up.less";
+@import "notice.less";
 
 html{
   background-color:white;
