--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -22,14 +22,16 @@
     margin-bottom:20px;
     border:1px solid black;
 }
+/* .delete__notice{
+    background:white;
+    border:none;
+    height:50px;
+}
+.delete__notice:target{
+    border:none;
+} */
 .delete__notice{
-    position: relative;
-    width:100%;
+    height:60px;
+    margin:auto 0;
 }
-.delete__notice-img{
-    position: absolute; 
-    z-index: 12;
-    right: 0;
-    margin: 10px auto 0;
-    max-width: 30px;
-}
+
