Сделал охереннную систему подтвержедния

--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -30,8 +30,24 @@
 .delete__notice:target{
     border:none;
 } */
-.delete__notice{
+/* .delete__notice{
     height:60px;
     margin:auto 0;
 }
-
+#deletenotice{
+display: none;
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+#deletenotice.open {
+    display: block;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  } */
