Небольшие дизайн правки кнопок

--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -21,15 +21,12 @@
     padding:10px;
     margin-bottom:20px;
     border:1px solid black;
-}
-/* .delete__notice{
-    background:white;
-    border:none;
+} 
+.delete__notice{
+  margin:auto 0;
     height:50px;
 }
-.delete__notice:target{
-    border:none;
-} */
+
 /* .delete__notice{
     height:60px;
     margin:auto 0;
