--- a/src/css/header.less
+++ b/src/css/header.less
@@ -104,4 +104,11 @@
     ::-webkit-scrollbar{
     width: 14px;
     }
-
+.user-block{
+    margin-left:10px;
+    font-size:16px;
+}
+.link-notice{
+    margin-left:auto;
+    margin-right:20px;
+}
