--- a/src/css/main.less
+++ b/src/css/main.less
@@ -104,7 +104,7 @@
 } */
 .red__button{
   background-color:red;
-  padding:12px 22px;
+  padding:15px 22px 12px; 
   color:white;
   border:none;
   font-size:16px;
