svg иконки в футуре

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,6 +1,6 @@
 .page-footer{
-    height:100px;
-    background-color:rgb(230, 230, 230);
+   /*  height:100px; */
+    background-color:rgb(245, 245, 245);
     margin-top:60px;
 }
 .main__footer{
@@ -8,8 +8,8 @@
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
-    padding:0 20px;
-    max-width:1200px;
+    padding:20px 20px;
+    max-width:1110px;
     margin:0 auto 0;
 }
 .social{
@@ -19,13 +19,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     list-style: none;
-    li{
-        padding:7px;
-        width:45px;
-        height:45px;
-        border-radius: 25px;
-        border:1px solid rgb(100, 100, 100);
-    }
+
 }
 .footer-login{
     position: absolute;
@@ -34,3 +28,24 @@
     bottom:0;
     width:100%;
 }
+
+.footer-nav{
+    border-bottom:1px solid #e1e6e7;
+}
+.promo__list{
+    width:1110px;
+    margin:0 auto;
+}
+.nav__item{
+    a{
+        position: relative;
+        display:block;
+        padding:23px 10px;
+    }
+}
+.social__link:hover path {
+    fill: #45abde;
+  }
+  .social__link:hover circle {
+    stroke: #45abde;
+  }
