--- a/src/css/main.less
+++ b/src/css/main.less
@@ -49,6 +49,7 @@
 .lots__list{
   display:flex;
   justify-content: space-between;
+  line-height: 1.2;
   flex-wrap: wrap;
   list-style: none;
   padding-left:20px;
@@ -239,4 +240,19 @@
   padding:15px;
   background:rgb(226, 74, 74);
   border-radius: 10px;
+}
+.delete-form__hotel{
+  display:flex;
+  justify-content: space-around;
+}
+.delete_button{
+  padding-left:30px;
+  padding-right:30px;
+}
+.delete__close{
+  padding-left:30px;
+  padding-right:30px;
+}
+.delete-form__close{
+  margin-top:15px;
 }
