--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -26,6 +26,10 @@
   margin:auto 0;
     height:50px;
 }
+.delete-form__notice{
+  display:flex;
+  justify-content: space-around;
+}
 
 /* .delete__notice{
     height:60px;
