--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -36,13 +36,33 @@
     width:1110px;
     margin:0 auto;
 }
-.nav__item{
+.nav__item, .nav__item-footer{
+
     a{
         position: relative;
         display:block;
-        padding:23px 10px;
+        padding:23px 42px;
     }
 }
+.nav__item a:hover{
+    background-color:rgb(230, 224, 154);;
+}
+  .nav__item-footer a:active {
+    color: #10658f;
+  }
+  .nav__item-footer a:hover::before {
+    display: block;
+}
+  .nav__item-footer a::before {
+    content: "";
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left:0px;
+    width: 100%;
+    height: 3px;
+    background-color: #034b5e;
+  }
 .social__link:hover path {
     fill: #45abde;
   }
