--- a/src/css/style.less
+++ b/src/css/style.less
@@ -11,6 +11,7 @@
 @import "hotel_details.less";
 @import "sign-up.less";
 @import "notice.less";
+@import "button.less";
 
 html{
   background-color:white;
