--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -61,7 +61,7 @@
     left:0px;
     width: 100%;
     height: 3px;
-    background-color: #034b5e;
+    background-color: #0a9dc5;
   }
 .social__link:hover path {
     fill: #45abde;
