Избавился от лишнего при поиске и добавил по городам

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -18,17 +18,21 @@
     padding:9px 26px;
     font-weight: 600;
     color:white;
-    margin-left:40px;
+    margin-left:20px;
   }
   .scan-input{
-      width:400px;
+      width:300px;
+  }
+  .scan-city{
+    width:150px;
+    margin-left:10px;
   }
   .scan-price{
       width:150px;
       margin-left:10px;
   }
   .label__price{
-      margin-left:30px;
+      margin-left:40px;
   }
 }
 .hr-shelf {
