Начал адаптацию под телефон

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -52,7 +52,7 @@
         color:white;
     }
 }
-.register, .auto{
+.register, .auto, .auto-min{
     padding:8px 15px;
     a{
         color:@text;
