--- a/src/css/main.less
+++ b/src/css/main.less
@@ -253,3 +253,9 @@
 .delete-form__close{
   margin-top:15px;
 }
+@media(min-width:320px)and(max-width:1110px){
+  .container{
+      margin-top:20px;
+      max-width:1110px;
+  }
+}
