Начал микроадаптацию сайта

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -69,3 +69,8 @@
   .social__link:hover circle {
     stroke: #45abde;
   }
+@media(min-width:320px)and(max-width:576px){
+  .promo__list{
+    display:none;
+  }
+}
