--- a/src/css/header.less
+++ b/src/css/header.less
@@ -116,3 +116,19 @@
     margin-left:auto;
     margin-right:20px;
 }
+@media(min-width:220px)and(max-width:576px){
+    .main-header{
+        width:320px;
+    }
+    .header-item{
+        li{
+        font-size:14px;
+        }
+    }
+    .dadayan{
+        display:none;
+    }
+    .header-nav{
+        display:none;
+    }
+}
