--- a/src/css/style.less
+++ b/src/css/style.less
@@ -38,6 +38,11 @@ body{
   display: grid;
   align-content: start;
 }
+@media(min-width:220px)and(max-width:576px){
+  body{
+    min-width: 240px;
+  }
+}
 button,
 input,
 optgroup,
