сделал адаптивный слайдер

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -70,7 +70,20 @@
     stroke: #45abde;
   }
 @media(min-width:320px)and(max-width:576px){
-  .promo__list{
-    display:none;
+  .main-promo{
+    height:45px;
   }
+  .promo__list{
+    /* display:block; */
+    margin-top:10px;
+    width:100%;
+    padding:0 2px;
+    font-size:18px; 
+}
+  .nav__item, .nav__item-footer{
+    a{
+      font-size:16px;
+        padding:5px;
+    }
+}
 }
