--- a/src/css/header.less
+++ b/src/css/header.less
@@ -118,17 +118,30 @@
 }
 @media(min-width:220px)and(max-width:576px){
     .main-header{
-        width:320px;
+        width:100%;
     }
     .header-item{
         li{
         font-size:14px;
         }
     }
+
+    .dadayan-min{
+        position:relative;
+        height:50px;
+        width:50px;
+        bottom:5px;
+    }
     .dadayan{
         display:none;
     }
-    .header-nav{
-        display:none;
+     .header-nav{
+        width:100%;
+    } 
+    
+    .nav__item{
+        a{
+            padding:5px;
+        }
     }
 }
