адаптация футера и популярных номеров

--- a/src/css/add.less
+++ b/src/css/add.less
@@ -88,3 +88,12 @@
     border-radius: 3px;
     cursor: pointer;
   }
+@media(min-width:320px)and(max-width:576px){
+  .add-container{
+    width:100%;
+  }
+  .form__container-two{
+    flex-wrap: wrap;
+  }
+  
+}
