--- a/src/css/login.less
+++ b/src/css/login.less
@@ -127,7 +127,7 @@
         font-size: 1.25rem;
         .text-register{
             font-size:20px;
-            padding-top:25px;
+            padding-top:10px;
             margin-right:6%;
         }
         .button__login{
@@ -168,10 +168,17 @@
     }
     .container-login{
         text-align: center;
+        width:100%;
     }
-    .login-email, .login-password {
+    .form__container-two{
+        width:100%;
+    }
+    .form__item--wide{
+        width:100%;
+    }
+    /* .login-email, .login-password {
         margin:0 auto;
-    }
+    } */
     .button__login{
         text-align: center;
     }
