--- a/src/css/main.less
+++ b/src/css/main.less
@@ -284,6 +284,7 @@
   }
   .lots__list{
     padding:0;
+    margin-bottom:60px;
     li{
       margin:0 auto;
     }
@@ -328,7 +329,7 @@
     display:flex;
     position:absolute;
     top:880px;
-    left:50%;
+    left:250px;
   }
   .slider-toggler{
     display: block;
@@ -342,4 +343,5 @@
   .slider-toggler-active{
     background-color:white;
   }
+
 }
