Отображение номеров текущего менеджера

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -184,8 +184,8 @@
 .delete_hotel{
   position:relative; 
   z-index:12;
-  top:-26px;
-  left:-10px;
+  top:-24px;
+  left:-11px;
   margin:0 auto;
   max-width:30px;
   //background-color:white;
@@ -214,9 +214,9 @@
 }
 .lots-title{
   margin-top:40px;
+  margin-bottom:40px;
   font-family: 'Geneva'; 
   font-size:22px;
-  //color:rgb(56, 52, 52);
   text-shadow: 2px 2px 4px rgb(126, 126, 126);
   text-transform: uppercase;
 }
@@ -261,6 +261,24 @@
 }
 .slider-controls{
   display:none;
+}
+.one_news span {
+  border: 1px dotted;
+  cursor: pointer;
+  display: block;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 85px;
+}
+.one_news span:hover{
+  border: 1px solid;
+}
+.user__button{
+  color:white;
+  margin-left:20px;
+  padding:15px;
+  background-color:red;
+  /* border-radius: 10px; */
 }
 @media(min-width:320px)and(max-width:1110px){
   .container{
