Дизайн red__button и вкладки уведомления

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -10,12 +10,13 @@
     border: 1px solid black;
   }
   .scan-btn{
+    cursor: pointer;
     background-color:red;
     height:40px;
     text-align:center;
     border:none;
     border-radius: 8%;
-    padding:9px 26px;
+    padding:9px 26px 8px;
     font-weight: 600;
     color:white;
     margin-left:20px;
