--- a/src/css/button.less
+++ b/src/css/button.less
@@ -1,9 +1,20 @@
+@red = #E1332D;
 .red__button{
     cursor: pointer;
     background-color:red;
-    padding:15px 22px 12px; 
+    padding:14px 22px 12px; 
     color:white;
     border:none;
     font-size:16px;
     border-radius: 3px;
-  }
+}
+.red__button:hover{
+  background: darken(#E1332D, 1.5%);
+  //background: darken(rgb(224, 34, 34), 1.5%);
+  /* border: 1px solid rgba(#000, .05); */
+  box-shadow: 1px 1px 2px rgba(#fff, .2);
+  color: lighten(#E1332D, 30%);  
+  text-decoration: none;
+  text-shadow: -1px -1px 0 darken(#E1332D, 9.5%);
+  transition: all 250ms linear;
+}
