--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -15,22 +15,41 @@
     max-width:1000px;
     
 }
+.notice-title{
+  text-align: center;
+  font-weight: 500;
+  margin:0 auto 20px;
+  font-size:28px;
+  padding-left: 10px;
+}
 .notice-block{
+    position: relative;
     display:flex;
     justify-content: space-between;
     padding:10px;
     margin-bottom:20px;
-    border:1px solid black;
+    border-radius:10px;
+    background-color:rgb(255, 249, 241);
+    border:1px solid rgb(116, 116, 116);
 } 
 .delete__notice{
-  margin:auto 0;
+    margin-top:55px;
+    margin-right:10px;
     height:50px;
 }
 .delete-form__notice{
   display:flex;
   justify-content: space-around;
 }
-
+.notice-text{
+  font-weight: 500;
+  margin-top:10px;
+}
+.notice__time{
+  position: absolute;
+  top:0px;
+  right:20px;
+}
 /* .delete__notice{
     height:60px;
     margin:auto 0;
