Добавил журналы для админа и сортировку

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -38,7 +38,7 @@
     min-width:170px;
 }
 
-.add-number{
+.add-number, .jurnal{
     background-color:red;
     height:50px;
     text-align:center;
@@ -116,7 +116,14 @@
     margin-left:auto;
     margin-right:20px;
 }
+.dadayan-min{
+    display:none;
+}
 @media(min-width:220px)and(max-width:576px){
+    .dadayan-min{
+        display:block;
+    }
+    
     .main-header{
         width:100%;
     }
