--- a/src/css/style.less
+++ b/src/css/style.less
@@ -12,7 +12,7 @@
 @import "hotel_details.less";
 @import "sign-up.less";
 @import "notice.less";
-
+@import "jurnal.less";
 
 html{
   background-color:white;
