--- a/src/css/main.less
+++ b/src/css/main.less
@@ -281,15 +281,21 @@
   background-color:red;
   /* border-radius: 10px; */
 }
-@media(min-width:320px)and(max-width:1110px){
+/* @media(min-width:320px)and(max-width:1110px){
   .container{
       margin-top:20px;
       max-width:1110px;
   }
-}
+} */
 @media(min-width:320px)and(max-width:576px){
   body{
     width:576px;
+  }
+  .user__button{
+    display:block;
+    margin:0 auto;
+    width:250px;
+    text-align: center;
   }
   .container{
     max-width:576px;
