--- a/src/css/jurnal.less
+++ b/src/css/jurnal.less
@@ -15,3 +15,12 @@
         color:white;
     }
 }
+.jurnal-category{
+    width:250px;
+}
+.jurnal-form{
+    display:flex;
+}
+.jurnal__button{
+    margin-left:50px;
+}
