--- a/src/css/style.less
+++ b/src/css/style.less
@@ -13,6 +13,7 @@
 @import "sign-up.less";
 @import "notice.less";
 @import "jurnal.less";
+@import "list_users.less";
 
 html{
   background-color:white;
@@ -35,7 +36,7 @@ body{
  // min-height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Cuprum", "Tah oma", sans-serif;
+  font-family: "Cuprum", "Tahoma", sans-serif;
   display: grid;
   align-content: start;
 }
