--- a/src/css/header.less
+++ b/src/css/header.less
@@ -38,7 +38,7 @@
     min-width:170px;
 }
 
-.add-number, .jurnal{
+.add-number, .jurnal__button{
     background-color:red;
     height:50px;
     text-align:center;
@@ -111,6 +111,7 @@
 .user-block{
     margin-left:10px;
     font-size:16px;
+
 }
 .link-notice{
     margin-left:auto;
