баги с отображением номеров

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -129,9 +129,14 @@
 .message__text{
   height:120px;
 }
+.one_news{
+  display:flex;
+  align-items: flex-end;
+}
 .like{
-  position: relative;
-  top:154px;
+ /*  position: relative;
+  top:154px; */
+  /* margin-top:auto; */
   margin-right:36px;
   padding:20px;
   width:30px;
@@ -212,6 +217,7 @@
 .lot__state{
   position:relative;
   min-height:200px;
+  padding-bottom:20px;
 }
 .lots-title{
   margin-top:40px;
@@ -228,14 +234,18 @@
 .lot__category{
   padding-top:15px;
 }
+.lot__cost{
+  margin-bottom:20px;
+}
 .lot__title{
+  max-width:240px;
   padding-top:16px;
   font-size:22px;
   font-weight: bold;
   font-weight: 700;
 }
 .lot__button{
-  position:absolute;
+  /* position:absolute; */
   color:white;
   margin-top:10px;
   padding:15px;
