Сделал адаптацию сайта

--- a/src/css/add.less
+++ b/src/css/add.less
@@ -91,6 +91,10 @@
 @media(min-width:320px)and(max-width:576px){
   .add-container{
     width:100%;
+    padding:0 15px;
+  }
+  .item-name{
+    width:300px;
   }
   .form__container-two{
     flex-wrap: wrap;
