--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -130,3 +130,14 @@
 /*     margin-top:150px; */
     margin:200px auto 0;
  }
+@media(min-width:320px)and(max-width:576px){
+    .container2{
+        width:100%;
+    }
+    .editor-description{
+        width:100%;
+    }
+    .editor__description{
+        width:100%;
+    }
+}
