--- a/src/css/jurnal.less
+++ b/src/css/jurnal.less
@@ -24,3 +24,21 @@
 .jurnal__button{
     margin-left:50px;
 }
+@media(min-width:220px)and(max-width:576px){
+    .jurnal__button{
+        margin-left:auto;
+    a{
+        font-size:12px;
+    }
+    }
+    .jurnal-form{
+        margin-top:10px;
+    }
+    .jurnal-category{
+        margin-left:10px;
+    }
+    .jurnal__sort{
+        margin-top:-1px;
+    }
+
+}
