--- a/src/css/main.less
+++ b/src/css/main.less
@@ -301,6 +301,13 @@
   body{
     width:576px;
   }
+  .container{
+    margin:0;
+    padding:0;
+  }
+  .lots__header{
+    text-align: center;
+  }
   .user__button{
     display:block;
     margin:0 auto;
@@ -321,7 +328,7 @@
     padding:0;
     margin-bottom:60px;
     li{
-      margin:0 auto;
+      margin:10px auto;
     }
   }
 .scan{
@@ -363,7 +370,7 @@
   .togglers{
     display:flex;
     position:absolute;
-    top:880px;
+    top:950px;
     left:250px;
   }
   .slider-toggler{
