--- a/src/css/sign-up.less
+++ b/src/css/sign-up.less
@@ -16,3 +16,9 @@
 .text-link{
     margin-top:10px;
 }
+@media(min-width:320px)and(max-width:576px){
+    .container-register{
+        width:100%;
+        margin:0;
+    }
+}
