--- a/src/css/header.less
+++ b/src/css/header.less
@@ -143,13 +143,45 @@
     .dadayan{
         display:none;
     }
+    .header-top{
+        padding-right:10px;
+    }
      .header-nav{
         width:100%;
     } 
-    
+
     .nav__item{
         a{
             padding:5px;
+        }
+    }
+    .list__users{
+        background-color: red;
+        height: 40px;
+        text-align: center;
+        border: none;
+        border-radius: 5%;
+        padding: 8px 10px;
+        margin-top:5px;
+        margin-right: 20px;
+        font-weight: 600;
+        a{
+            font-size:12px;
+            color:white;
+        }
+    }
+    .jurnal__button{
+        background-color:red;
+        height:40px;
+        text-align:center;
+        border:none;
+        border-radius: 5%;
+        padding:8px 20px;
+        margin-top:5px;
+        margin-right:20px;
+        font-weight: 600;
+        a{
+            color:white;
         }
     }
 }
