--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -46,7 +46,8 @@
 .editor__description{
     width:900px;
     textarea{
-        min-height:120px;
+        font-weight: 400;
+        min-height:150px;
         padding:8px;
       }
 }
@@ -56,7 +57,7 @@
     font-size:26px;
 }
 .input__file-button,.editor__image{
-    margin-top:20px;
+    margin-top:0px;
 }
 .editor__item{
     display:flex;
