--- a/src/css/header.less
+++ b/src/css/header.less
@@ -37,8 +37,11 @@
     margin-top:-5px;
     min-width:170px;
 }
-
-.add-number, .jurnal__button{
+.button__meneger{
+    text-align: center;
+    width:150px;
+}
+.add-number, .jurnal__button, .list__users{
     background-color:red;
     height:50px;
     text-align:center;
@@ -119,6 +122,12 @@
 }
 .dadayan-min{
     display:none;
+}
+.list__users{
+
+    a{
+        color:white;
+    }
 }
 @media(min-width:220px)and(max-width:576px){
     .dadayan-min{
