--- a/src/css/login.less
+++ b/src/css/login.less
@@ -22,15 +22,17 @@
       border: 1px solid black;
       box-sizing: border-box;
     }
-    margin: 0;
-    margin-bottom: 14px;
+    //margin: 0;
+    //margin-bottom: 14px;
     font-size: 14px;
 }
-  .form__container-two{
+  /* .form__container-two{
     display:flex;
     width:750px;
+    margin:0 auto;
+    align-items: center;
     justify-content: space-between;
-  }
+  } */
   .form__item select {
     display: block;
     //width: 350px;
@@ -160,6 +162,10 @@
     transition: 0.3s;
 }
 @media(min-width:320px)and(max-width:576px){
+    .button__login{
+        margin-top:20px;
+        margin-bottom:20px;
+    }
     .container-login{
         margin:0;
     }
