--- a/src/css/notice.less
+++ b/src/css/notice.less
@@ -50,6 +50,12 @@
   top:0px;
   right:20px;
 }
+@media(min-width:320px)and(max-width:576px){
+  .notice-text{
+    font-weight: 500;
+    margin-top:40px;
+  }
+}
 /* .delete__notice{
     height:60px;
     margin:auto 0;
