--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -31,8 +31,8 @@
 .editor-redactor__text{
     position:absolute;
     color:black;
-    right:45px;
-    top:14px;
+    right:50px;
+    top:10px;
     font-size:18px;
     text-transform: uppercase;
 }
@@ -139,5 +139,10 @@
     }
     .editor__description{
         width:100%;
+    }
+    .hotel_gallery{
+        height:85px;
+        display:inline;
+        cursor: pointer;
     }
 }
