стало скучно и я добавлял анимации
анимация кнопки, автризации и регистрации. 9 номеров. new уведомление

--- a/src/css/button.less
+++ b/src/css/button.less
@@ -1,7 +1,7 @@
-@red = #E1332D;
+
 .red__button{
     cursor: pointer;
-    background-color:red;
+    background-color:@red;
     padding:14px 22px 12px; 
     color:white;
     border:none;
@@ -9,12 +9,12 @@
     border-radius: 3px;
 }
 .red__button:hover{
-  background: darken(#E1332D, 1.5%);
+  background: darken(#cc201a, 1.5%);
   //background: darken(rgb(224, 34, 34), 1.5%);
   /* border: 1px solid rgba(#000, .05); */
   box-shadow: 1px 1px 2px rgba(#fff, .2);
-  color: lighten(#E1332D, 30%);  
+  color: lighten(#cc201a, 30%);  
   text-decoration: none;
-  text-shadow: -1px -1px 0 darken(#E1332D, 9.5%);
+  text-shadow: -1px -1px 0 darken(#cc201a, 9.5%);
   transition: all 250ms linear;
 }
