--- a/src/css/hotel_details.less
+++ b/src/css/hotel_details.less
@@ -116,8 +116,8 @@
     position: relative;
     width: auto;
     //margin: 29%;
-    margin-top:70px;
-    margin-left:35%;
+    //margin-top:70px;
+    margin:50px auto 0;
     max-width:600px;
   }
 
